--- a/product-service.properties
+++ b/product-service.properties
@@ -1,1 +1,26 @@
-test.poperties=test
+spring.application.name =product-service
+# ===============================
+# = DATA SOURCE
+# ===============================
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.testWhileIdle = true
+#spring.datasource.validationQuery = SELECT 1
+
+# ===============================
+# = JPA / HIBERNATE
+# ===============================
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+#spring.jpa.properties.hibernate.jdbc.batch_size=20
+#spring.jpa.properties.hibernate.order_inserts=true
+
+# ===============================
+# = EUREKA
+# ===============================
+server.port=0
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+management.endpoints.web.exposure.include=*
