Product service configuration changes

--- a/product-service.properties
+++ b/product-service.properties
@@ -1,4 +1,4 @@
-spring.application.name=product-service
+test.properties=Test V.1
 # ===============================
 # = DATA SOURCE
 # ===============================
@@ -17,10 +17,3 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 #spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 #spring.jpa.properties.hibernate.jdbc.batch_size=20
 #spring.jpa.properties.hibernate.order_inserts=true
-
-# ===============================
-# = EUREKA
-# ===============================
-server.port=0
-eureka.instance.instance-id=${spring.application.name}:${random.uuid}
-management.endpoints.web.exposure.include=*
